--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-14 07:01+0000\n"
+"POT-Creation-Date: 2026-01-14 07:10+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -20,11 +20,11 @@ msgstr ""
 
 #: apps/core/templates/components/header.html:23
 msgid "Поиск..."
-msgstr ""
+msgstr "Поиск..."
 
 #: apps/core/templates/components/header.html:28
 msgid "Настройки"
-msgstr ""
+msgstr "Настройки"
 
 #: apps/core/templates/components/header.html:71
 msgid "Администратор"
@@ -35,12 +35,12 @@ msgid "Студент"
 msgstr "Студент"
 
 #: apps/core/templates/components/header.html:82
-msgid "Мой профиль"
-msgstr ""
+msgid "👤 Мой профиль"
+msgstr "👤 Мой профиль"
 
 #: apps/core/templates/components/header.html:88
-msgid "Выйти"
-msgstr ""
+msgid "🚪 Выйти"
+msgstr "🚪 Выйти"
 
 #: apps/core/templates/components/header.html:98
 #: apps/users/templates/users/base_auth.html:359
