Update all locales with Email emoji and re-verify profile template

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -208,7 +208,7 @@ msgstr "Username"
 
 #: apps/users/templates/users/profile.html:162
 msgid "Email"
-msgstr ""
+msgstr "📧"
 
 #: apps/users/templates/users/profile.html:167
 msgid "Имя"
