--- a/locale/uk/LC_MESSAGES/django.po
+++ b/locale/uk/LC_MESSAGES/django.po
@@ -208,7 +208,7 @@ msgstr "Ім'я користувача"
 
 #: apps/users/templates/users/profile.html:162
 msgid "Email"
-msgstr "Email"
+msgstr "📧"
 
 #: apps/users/templates/users/profile.html:167
 msgid "Имя"
